fix: hero img height on mobile

--- a/src/app/(home)/_sections/Hero.module.css
+++ b/src/app/(home)/_sections/Hero.module.css
@@ -2,9 +2,12 @@
 	width: 100%;
 	min-height: 100svh;
 	overflow: hidden;
-	padding-block: 15rem 5rem;
+	padding-block: 12rem 5rem;
 	position: relative;
-	overflow: hidden;
+
+	@media (width <= 768px) {
+		padding-block: 8rem 3rem;
+	}
 }
 
 .heroContent {
@@ -25,22 +28,27 @@
 	}
 }
 
-@media (width <= 640px) {
+/* @media (width <= 640px) {
 	.heroContent {
 		padding-bottom: 2rem;
 	}
-}
+} */
+
 .heroImgWrapper {
 	width: 100%;
-	height: 75%;
+	/* height: 75%; */
 	overflow: hidden;
 }
 
 .heroImg {
 	width: 100%;
-	height: 100%;
+	height: 65vh;
 	object-fit: cover;
 	display: block;
+
+	@media (width <= 768px) {
+		height: 60vh;
+	}
 }
 
 .heroText {
