--- a/src/app/(home)/_sections/StMich.module.css
+++ b/src/app/(home)/_sections/StMich.module.css
@@ -35,18 +35,18 @@
 
 .images {
 	width: 100%;
-
 	position: relative;
-	margin-bottom: 4rem;
+	margin-bottom: 8rem;
 	will-change: transform;
-	min-height: calc(50rem + (100vw - 100vh) * 0.5);
+	min-height: calc(48rem + (100vw - 100vh) * 0.5);
 
 	@media (width >= 1256px) {
 		margin-bottom: 0;
 	}
 
-	@media (width <= 648px) {
+	@media (width <= 768px) {
 		margin-bottom: 0;
+		min-height: calc(45rem + (100vw - 100vh) * 0.5);
 	}
 
 	.imageContainer {
